[gd_scene load_steps=16 format=2]

[ext_resource path="res://GameDVDCardtridge/TemplateHexagonEngine/MenuPart/InheritableMenuArea.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameDVDCardtridge/TemplateHexagonEngine/MenuPart/Derival/SettingArea.tres.gd" type="Script" id=2]
[ext_resource path="res://GameDVDCardtridge/TemplateHexagonEngine/MenuPart/InheritableCategoryButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://font/ubuntu-font-family-0.83/Ubuntu-M.ttf" type="FontFile" id=4]
[ext_resource path="res://GameDVDCardtridge/TemplateHexagonEngine/MenuPart/SettingSectionButton/AudioSection.tscn" type="PackedScene" id=5]
[ext_resource path="res://GameDVDCardtridge/TemplateHexagonEngine/MenuPart/InheritableCategoryArea.tscn" type="PackedScene" id=6]
[ext_resource path="res://fonts/Built/Ubuntu_M_48tred.tres" type="FontFile" id=7]
[ext_resource path="res://Sprites/SpecialButtoning.png" type="Texture2D" id=8]
[ext_resource path="res://GameDVDCardtridge/TemplateHexagonEngine/MenuPart/SettingSectionButton/AudioCategoryArea.tscn" type="PackedScene" id=9]
[ext_resource path="res://GameDVDCardtridge/TemplateHexagonEngine/MenuPart/ButtonGroup/CategoryButtonGroup2.tres" type="ButtonGroup" id=10]
[ext_resource path="res://GameDVDCardtridge/TemplateHexagonEngine/MenuPart/SettingSectionButton/DisplayCategoryArea.tscn" type="PackedScene" id=11]
[ext_resource path="res://GameDVDCardtridge/TemplateHexagonEngine/MenuPart/SettingSectionButton/DisplayCategoryButton.tscn" type="PackedScene" id=12]


[sub_resource type="FontFile" id=1]
resource_local_to_scene = true
resource_name = "Ubuntu Medium 48"
size = 48
outline_size = 1
outline_color = Color( 0.129412, 0, 0.219608, 1 )
font_data = ExtResource( 4 )

[sub_resource type="FontFile" id=2]
resource_local_to_scene = true
resource_name = "Ubuntu Medium 48"
size = 48
outline_size = 1
outline_color = Color( 0.129412, 0, 0.219608, 1 )
font_data = ExtResource( 4 )

[sub_resource type="FontFile" id=3]
resource_local_to_scene = true
resource_name = "Ubuntu Medium 48"
size = 48
outline_size = 1
outline_color = Color( 0.129412, 0, 0.219608, 1 )
font_data = ExtResource( 4 )

[node name="SettingArea" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="." index="0"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CategoryScrolling" type="ScrollContainer" parent="HBoxContainer" index="0"]
offset_right = 500.0
offset_bottom = 1080.0
custom_minimum_size = Vector2( 500, 0 )
size_flags_vertical = 3

[node name="CategorySelection" type="VBoxContainer" parent="HBoxContainer/CategoryScrolling" index="0"]
offset_right = 500.0
offset_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="InheritableCategoryButton" parent="HBoxContainer/CategoryScrolling/CategorySelection" index="0" instance=ExtResource( 3 )]
theme_override_fonts/font = SubResource( 1 )
group = ExtResource( 10 )

[node name="AudioSection" parent="HBoxContainer/CategoryScrolling/CategorySelection" index="1" instance=ExtResource( 5 )]
offset_top = 108.0
offset_bottom = 208.0
theme_override_fonts/font = SubResource( 2 )
pressed = true
group = ExtResource( 10 )

[node name="DisplayCategoryButton" parent="HBoxContainer/CategoryScrolling/CategorySelection" index="2" instance=ExtResource( 12 )]
offset_top = 216.0
offset_bottom = 316.0
theme_override_fonts/font = SubResource( 3 )
group = ExtResource( 10 )

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer" index="1"]
offset_left = 508.0
offset_right = 1920.0
offset_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SeriouslyContainer" type="VBoxContainer" parent="HBoxContainer/ScrollContainer" index="0"]
offset_right = 1412.0
offset_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="InheritableCategoryArea" parent="HBoxContainer/ScrollContainer/SeriouslyContainer" index="0" instance=ExtResource( 6 )]
visible = false
offset_right = 1388.0
offset_bottom = 911.0

[node name="DummyCategory" type="VBoxContainer" parent="HBoxContainer/ScrollContainer/SeriouslyContainer" index="1"]
visible = false
offset_right = 1388.0
offset_bottom = 1137.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CheckBox" type="CheckBox" parent="HBoxContainer/ScrollContainer/SeriouslyContainer/DummyCategory" index="0"]
offset_right = 1388.0
offset_bottom = 48.0
text = "Check"

[node name="CheckBox2" type="CheckBox" parent="HBoxContainer/ScrollContainer/SeriouslyContainer/DummyCategory" index="1"]
offset_top = 56.0
offset_right = 1388.0
offset_bottom = 104.0
text = "Check"

[node name="CheckBox3" type="CheckBox" parent="HBoxContainer/ScrollContainer/SeriouslyContainer/DummyCategory" index="2"]
offset_top = 112.0
offset_right = 1388.0
offset_bottom = 160.0
text = "Check"

[node name="CheckBox4" type="CheckBox" parent="HBoxContainer/ScrollContainer/SeriouslyContainer/DummyCategory" index="3"]
offset_top = 168.0
offset_right = 1388.0
offset_bottom = 216.0
text = "Check"

[node name="CheckBox5" type="CheckBox" parent="HBoxContainer/ScrollContainer/SeriouslyContainer/DummyCategory" index="4"]
offset_top = 224.0
offset_right = 1388.0
offset_bottom = 272.0
text = "Check"

[node name="CheckBox6" type="CheckBox" parent="HBoxContainer/ScrollContainer/SeriouslyContainer/DummyCategory" index="5"]
offset_top = 280.0
offset_right = 1388.0
offset_bottom = 328.0
text = "Check"

[node name="CheckBox7" type="CheckBox" parent="HBoxContainer/ScrollContainer/SeriouslyContainer/DummyCategory" index="6"]
offset_top = 336.0
offset_right = 1388.0
offset_bottom = 384.0
text = "Check"

[node name="CheckBox15" type="CheckBox" parent="HBoxContainer/ScrollContainer/SeriouslyContainer/DummyCategory" index="7"]
offset_top = 392.0
offset_right = 1388.0
offset_bottom = 440.0
text = "Check"

[node name="CheckBox16" type="CheckBox" parent="HBoxContainer/ScrollContainer/SeriouslyContainer/DummyCategory" index="8"]
offset_top = 448.0
offset_right = 1388.0
offset_bottom = 496.0
text = "Check"

[node name="CheckBox17" type="CheckBox" parent="HBoxContainer/ScrollContainer/SeriouslyContainer/DummyCategory" index="9"]
offset_top = 504.0
offset_right = 1388.0
offset_bottom = 552.0
text = "Check"

[node name="CheckBox18" type="CheckBox" parent="HBoxContainer/ScrollContainer/SeriouslyContainer/DummyCategory" index="10"]
offset_top = 560.0
offset_right = 1388.0
offset_bottom = 608.0
text = "Check"

[node name="CheckBox19" type="CheckBox" parent="HBoxContainer/ScrollContainer/SeriouslyContainer/DummyCategory" index="11"]
offset_top = 616.0
offset_right = 1388.0
offset_bottom = 664.0
text = "Check"

[node name="CheckBox20" type="CheckBox" parent="HBoxContainer/ScrollContainer/SeriouslyContainer/DummyCategory" index="12"]
offset_top = 672.0
offset_right = 1388.0
offset_bottom = 720.0
text = "Check"

[node name="HScrollBar" type="HScrollBar" parent="HBoxContainer/ScrollContainer/SeriouslyContainer/DummyCategory" index="13"]
offset_top = 728.0
offset_right = 1388.0
offset_bottom = 752.0

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="HBoxContainer/ScrollContainer/SeriouslyContainer/DummyCategory" index="14"]
offset_top = 760.0
offset_right = 1388.0
offset_bottom = 760.0

[node name="ProgressBar" type="ProgressBar" parent="HBoxContainer/ScrollContainer/SeriouslyContainer/DummyCategory" index="15"]
offset_top = 768.0
offset_right = 1388.0
offset_bottom = 787.0

[node name="SpinBox" type="SpinBox" parent="HBoxContainer/ScrollContainer/SeriouslyContainer/DummyCategory" index="16"]
offset_top = 795.0
offset_right = 1388.0
offset_bottom = 834.0

[node name="LinkButton" type="LinkButton" parent="HBoxContainer/ScrollContainer/SeriouslyContainer/DummyCategory" index="17"]
offset_top = 842.0
offset_right = 1388.0
offset_bottom = 942.0
custom_minimum_size = Vector2( 0, 100 )
theme_override_fonts/font = ExtResource( 7 )
text = "Linker"
underline = 1

[node name="NinePatchRect" type="NinePatchRect" parent="HBoxContainer/ScrollContainer/SeriouslyContainer/DummyCategory" index="18"]
offset_top = 950.0
offset_right = 1388.0
offset_bottom = 1050.0
custom_minimum_size = Vector2( 100, 100 )
texture = ExtResource( 8 )
region_rect = Rect2( -0.435417, -0.17046, 127.621, 128.696 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 7
patch_margin_bottom = 9

[node name="HSlider" type="HSlider" parent="HBoxContainer/ScrollContainer/SeriouslyContainer/DummyCategory" index="19"]
offset_top = 1058.0
offset_right = 1388.0
offset_bottom = 1090.0

[node name="SpinBox2" type="SpinBox" parent="HBoxContainer/ScrollContainer/SeriouslyContainer/DummyCategory" index="20"]
offset_top = 1098.0
offset_right = 1388.0
offset_bottom = 1137.0

[node name="AudioCategoryArea" parent="HBoxContainer/ScrollContainer/SeriouslyContainer" index="2" instance=ExtResource( 9 )]
offset_right = 1412.0

[node name="DisplayCategoryArea" parent="HBoxContainer/ScrollContainer/SeriouslyContainer" index="3" instance=ExtResource( 11 )]
visible = false
offset_top = 585.0
offset_right = 1412.0
[connection signal="gui_input" from="HBoxContainer/CategoryScrolling" to="." method="_on_CategoryScrolling_gui_input"]
[connection signal="LoadThisCategoryPlease" from="HBoxContainer/CategoryScrolling/CategorySelection/InheritableCategoryButton" to="." method="_on_InheritableCategoryButton_LoadThisCategoryPlease"]
[connection signal="StatusPressed" from="HBoxContainer/CategoryScrolling/CategorySelection/InheritableCategoryButton" to="." method="_on_InheritableCategoryButton_StatusPressed"]
[connection signal="LoadThisCategoryPlease" from="HBoxContainer/CategoryScrolling/CategorySelection/AudioSection" to="." method="_on_AudioSection_LoadThisCategoryPlease"]
[connection signal="StatusPressed" from="HBoxContainer/CategoryScrolling/CategorySelection/AudioSection" to="." method="_on_AudioSection_StatusPressed"]
[connection signal="LoadThisCategoryPlease" from="HBoxContainer/CategoryScrolling/CategorySelection/DisplayCategoryButton" to="." method="_on_DisplayCategoryButton_LoadThisCategoryPlease"]
[connection signal="StatusPressed" from="HBoxContainer/CategoryScrolling/CategorySelection/DisplayCategoryButton" to="." method="_on_DisplayCategoryButton_StatusPressed"]
[connection signal="gui_input" from="HBoxContainer/ScrollContainer" to="." method="_on_ScrollContainer_gui_input"]
